fix: add missing margin auto to standard.css

--- a/CSS/standard.css
+++ b/CSS/standard.css
@@ -14,4 +14,5 @@ body {
 
 main {
     max-width: var(--content-max-width);
+    margin: 0 auto;
 }
